@@ -60,6 +60,7 @@ enum {
         GROUP_COL_MANAGER_NAME,
         GROUP_COL_MANAGER_PHONE,
         GROUP_COL_MANAGER_EMAIL,
+	GROUP_COL,
         NUMBER_OF_GROUP_COLS
 };
 
